--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -13,6 +13,12 @@ button {
     padding: 5px 20px;
 }
 
+button:hover {
+    background-color: white;
+    color: black;
+    border-color: black;
+}
+
 .log-box {
     background-color: #EEEEEE;
     border: 1px solid #CCCCCC;
